<resources>
    <string name="app_name">BOC Android</string>

    <string name="bapp">B App </string>
    <string name="login">LogIn </string>
    <string name="loginsub"> Please sign into continue </string>
    <string name="username"> User Name </string>
    <string name="Password"> Password </string>
    <string name="ButtonUnlock"> Unlock </string>
    <string name="Buttonlogin"> LOGIN </string>
    <string name="txtForgot"> Forgot Password? </string>
    <string name="signupguide"> Do not have an account?</string>
    <string name="signup"> Sign Up</string>
    <string name="ForgotHeader"> Forgot Password?</string>
    <string name="userIdGuide">Please enter user Id to continue</string>
    <string name="userId">User Id</string>\
    <string name="btnCancel">Cancel</string>
    <string name="buttonSubmit">Submit</string>
    <string name="OTPHeading">OTP Verification</string>
    <string name="refno">Reference Number - 78493734272810</string>
    <string name="otpdef"> A one time Password has been generated
    and dispatched to your mobile number for
    this transaction. Kindly enter the One Time
    Password in the field below for this
    transaction to proceed.
    The One Time Password is only valid for
    next 5 minutes


    </string>

    <string name="txtotp">OTP</string>
    <string name="txtBtn">Test</string>

    <string name="textnotrecive"> Did not recive OTP?</string>
    <string name="resendtxt"> Resend</string>

    <string name="Securityheadding"> Security
                Questions
    </string>
    <string name="fill">Please Fill the Field</string>
    <string name="accountNo">Please Enter account number</string>
    <string name="invalid">Insert numbers only.</string>


    <string-array name="beneficiary">Select Transmission

        <item>Choose from Beneficiary</item>
        <item>SLIIT University</item>
        <item>Kothalawala University</item>
        <item>Ananda College</item>
        <item>Cisco Company</item>
    </string-array>


    <string-array name="MyBeneficiary">Select Transmission

        <item>Choose from Beneficiary</item>
        <item>Bussiness Account </item>
        <item>Personal Account</item>
    </string-array>


    <string name="resettitle">Reset Password</string>
    <string name="txtNewPassword">New Password</string>
    <string name="txtConfirmPassword">Confirm Password</string>
    <string name="txtpasswordPolicy">Password Policy</string>
    <string name="txtpp1">Should be maximum 15 characters</string>
    <string name="txtpp2">Should be minimum 8 characters</string>
    <string name="txtpp3">Can contain lower case alphabets</string>
    <string name="profiletiltle">Your Profile</string>


</resources>