<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    tools:context=".IT19210520.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="422dp"
        android:layout_height="38dp"
        android:layout_marginTop="771dp"
        android:layout_marginBottom="37dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="66dp"
            android:layout_height="0dp"
            android:layout_marginTop="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/boclogo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="217dp"
        app:layout_constraintGuide_percent="0.25" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="221dp"
        android:layout_height="116dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintEnd_toStartOf="@+id/cardView3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/boclogo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="134dp"
        android:layout_marginEnd="352dp"
        android:text="@string/bapp"
        android:textColor="#707070"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="175dp"
        android:layout_height="49dp"
        android:layout_marginStart="34dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login"
        android:textColor="#333333"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toStartOf="@+id/cardView3"
        app:layout_constraintHorizontal_bias="0.034"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/loginsub"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/cardView3"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/text_field_cus"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="337dp"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.751026" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/username"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/loginUserNameId"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.762" />

    <TextView
        android:id="@+id/PasswordId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="380dp"
        android:fontFamily="@font/poppins"
        android:text="@string/Password"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginUserNameId"
        android:layout_width="308dp"
        android:layout_height="49dp"
        android:layout_marginStart="77dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/text_field_cus"
        android:ems="10"
        android:hint="UdaraMadhuranga"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/PasswordId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintVertical_bias="0.919" />

    <EditText
        android:id="@+id/loginPasswordId"
        android:layout_width="319dp"
        android:layout_height="55dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="402dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/text_field_cus"
        android:ems="10"
        android:hint="1234567u"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/txtForgot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnUnlock"
        android:layout_width="257dp"
        android:layout_height="60dp"
        android:layout_marginStart="154dp"
        android:layout_marginTop="498dp"
        android:layout_marginEnd="154dp"

        android:backgroundTint="@color/dark_background"
        android:fontFamily="@font/poppins"

        android:text="@string/ButtonUnlock"
        android:textAllCaps="false"
        android:textColor="@color/primary_yellow"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnlogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.786"
        app:rippleColor="@color/black" />

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="257dp"
        android:layout_height="60dp"
        android:layout_marginTop="554dp"

        android:backgroundTint="@color/dark_background"
        android:fontFamily="@font/poppins"

        android:text="@string/Buttonlogin"

        android:textAllCaps="false"
        android:textColor="@color/primary_yellow"
        android:textSize="16sp"
        app:cornerRadius="8dp"

        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtForgot"
        android:layout_width="195dp"
        android:layout_height="48dp"
        android:layout_marginStart="243dp"
        android:layout_marginTop="468dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/txtForgot"
        android:textAlignment="textEnd"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnUnlock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.433" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="684dp"
        android:layout_marginEnd="162dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/signupguide"
        android:textColor="#605F5F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="684dp"
        android:layout_marginEnd="78dp"
        android:fontFamily="@font/poppins"
        android:text="@string/signup"
        android:textColor="#EA890A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="192dp"
        android:layout_height="214dp"
        android:layout_marginStart="218dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="652dp"
        app:cardCornerRadius="60dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/bocbak1" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="49dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="346dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/PasswordId"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/profile1" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="49dp"
        android:layout_height="45dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="405dp"
        android:layout_marginEnd="345dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"

        app:layout_constraintBottom_toTopOf="@+id/txtForgot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/lock" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="20dp"
        android:layout_height="23dp"
        android:layout_marginStart="248dp"
        android:layout_marginTop="606dp"
        android:layout_marginEnd="118dp"
        android:backgroundTint="@color/dark_background"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.054">

        <ImageView
            android:id="@+id/imageView25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/ic_arrow" />
    </androidx.cardview.widget.CardView>
    <![CDATA[




    />



        />






]]>
</androidx.constraintlayout.widget.ConstraintLayout>