<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    tools:context=".IT19210520.OTP">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="422dp"
        android:layout_height="38dp"
        android:layout_marginTop="771dp"
        android:layout_marginBottom="37dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="66dp"
            android:layout_height="0dp"
            android:layout_marginTop="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/boclogo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="541dp"
        android:layout_marginEnd="356dp"
        android:layout_marginBottom="306dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/txtotp"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="351dp"
        android:layout_marginTop="165dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="682dp"
        android:text="@string/bapp"
        android:textColor="#707070"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.50" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp"
        app:layout_constraintGuide_percent="1.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView6"
        android:layout_width="125dp"
        android:layout_height="90dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="69dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="710dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/boclogo" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="138dp"
        android:layout_height="132dp"
        android:layout_marginStart="129dp"

        android:layout_marginTop="170dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="578dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/otp2" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView11"
        android:layout_width="250dp"
        android:layout_height="53dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="314dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="502dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/OTPHeading"
        android:textColor="#333333"
        android:textSize="27sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="258dp"
        android:layout_height="35dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="349dp"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="485dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/refno"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="291dp"
        android:layout_height="114dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="404dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="351dp"
        android:background="@drawable/udarabutton"
        android:fontFamily="@font/poppins"
        android:text="@string/otpdef"
        android:textAlignment="center"
        android:textColor="#333333"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/otp1"
        android:layout_width="62dp"
        android:layout_height="61dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="570dp"
        android:layout_marginEnd="289dp"
        android:layout_marginBottom="238dp"
        android:background="@drawable/udarabutton"
        android:ems="10"
        android:hint="6"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/otp3"
        android:layout_width="62dp"
        android:layout_height="61dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="570dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="238dp"
        android:background="@drawable/udarabutton"
        android:ems="10"
        android:hint="9"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/otp4"
        android:layout_width="62dp"
        android:layout_height="61dp"
        android:layout_marginStart="301dp"
        android:layout_marginTop="570dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="238dp"
        android:background="@drawable/udarabutton"
        android:ems="10"
        android:hint="3"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/otp2"
        android:layout_width="62dp"
        android:layout_height="61dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="570dp"
        android:layout_marginEnd="209dp"
        android:layout_marginBottom="238dp"
        android:background="@drawable/udarabutton"
        android:ems="10"
        android:hint="4"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bynOTPSub"
        android:layout_width="163dp"
        android:layout_height="65dp"
        android:layout_marginStart="123dp"

        android:layout_marginTop="690dp"
        android:layout_marginEnd="123dp"

        android:layout_marginBottom="110dp"
        android:backgroundTint="@color/dark_background"
        android:fontFamily="@font/poppins"

        android:text="@string/buttonSubmit"
        android:textAllCaps="false"
        android:textColor="@color/primary_yellow"
        android:textSize="16sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="113dp"
        android:layout_marginTop="652dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="198dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/textnotrecive"
        android:textColor="#757171"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="265dp"
        android:layout_marginTop="651dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="196dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/resendtxt"
        android:textColor="#EA890A"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>